apply overflow correctly

--- a/src/app/pages/landing/landing.component.scss
+++ b/src/app/pages/landing/landing.component.scss
@@ -2,5 +2,5 @@
   display: block;
   height: 100%;
   max-width: 100vw;
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
